--- a/WebAppJenkins/Dockerfile
+++ b/WebAppJenkins/Dockerfile
@@ -1,29 +1,31 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
+# Use ASP.NET runtime image as the base for final container
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8082
 EXPOSE 8083
 
-
-# This stage is used to build the service project
+# Use .NET SDK image to build the application
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["WebAppJenkins/WebAppJenkins.csproj", "WebAppJenkins/"]
-RUN dotnet restore "./WebAppJenkins/WebAppJenkins.csproj"
-COPY . .
-WORKDIR "/src/WebAppJenkins"
-RUN dotnet build "./WebAppJenkins.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
+# Copy the project file and restore dependencies
+COPY WebAppJenkins/WebAppJenkins.csproj WebAppJenkins/
+RUN dotnet restore WebAppJenkins/WebAppJenkins.csproj
+
+# Copy the entire source code
+COPY . .
+
+# Build the application
+WORKDIR /src/WebAppJenkins
+RUN dotnet build WebAppJenkins.csproj -c $BUILD_CONFIGURATION -o /app/build
+
+# Publish the application
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./WebAppJenkins.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish WebAppJenkins.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+# Final image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
