--- a/WebAppJenkins/Dockerfile
+++ b/WebAppJenkins/Dockerfile
@@ -1,31 +1,30 @@
-# Use ASP.NET runtime image as the base for final container
+# Stage 1: Base image for runtime
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 8082
 EXPOSE 8083
 
-# Use .NET SDK image to build the application
+# Stage 2: Build the application
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-# Copy the project file and restore dependencies
-COPY WebAppJenkins/WebAppJenkins.csproj WebAppJenkins/
-RUN dotnet restore WebAppJenkins/WebAppJenkins.csproj
+# Copy project file and restore dependencies
+COPY WebAppJenkins.csproj ./
+RUN dotnet restore WebAppJenkins.csproj
 
-# Copy the entire source code
+# Copy all source files
 COPY . .
 
 # Build the application
-WORKDIR /src/WebAppJenkins
 RUN dotnet build WebAppJenkins.csproj -c $BUILD_CONFIGURATION -o /app/build
 
-# Publish the application
+# Stage 3: Publish the application
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish WebAppJenkins.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# Final image
+# Stage 4: Final runtime image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
